versioned_docs/version-2.1/reusables/errors/OCE019.mdx
import ErrorDisplay from '@site/src/components/ErrorDisplay.jsx';
import BirthDateOverSsn4Admonition from '@site/versioned_docs/version-2.1/reusables/birth-date-over-ssn4-admonition.mdx'; 

<ErrorDisplay
  message='Maximum input attempts exceeded. Please try again later.'
  identifiers='{ [identifierType: string]: string }'
  verificationMethod='{ [identifierType: string]: string }'
  inputAttemptsExceeded='[inputs]'
  description=''
  riskSignals='true'
  integrationType=''
  whenThisIsReturned='When the maximum number of birth date attempts has been exceeded.' 
  howToHandle='Consider flagging or restricting the phone number associated with the user, so a bad actor cannot keep trying new birth date values.'
  youShouldNeverGetThisError=''
>
  ###### `OCE019`
</ErrorDisplay>

The `inputs` included in `data.inputAttemptsExceeded` is a comma separated list of inputs for which the attempts limit has been exceeded.

Currently `inputs` will always include one of more of birth date, SSN4, and first name — see the examples below. **The attempts limit for either type of input is 3 unique values within 30 minutes.**

```typescript title="Example: Birth Date Only"
{
    ...
    "message": "Maximum input attempts exceeded. Please try again later."
    ...
    "data": {
        "errorCode": "OCE019",
        "inputAttemptsExceeded": ["birthDate"],
        ...
    }
}
```

```typescript title="Example: SSN4 Only"
{
    ...
    "message": "Maximum input attempts exceeded. Please try again later."
    ...
    "data": {
        "errorCode": "OCE019",
        "inputAttemptsExceeded": ["ssn4"],
        ...
    }
}
```

```typescript title="Example: Both Birth Date and SSN4"
{
    ...
    "message": "Maximum input attempts exceeded. Please try again later."
    ...
    "data": {
        "errorCode": "OCE019",
        "inputAttemptsExceeded": ["birthDate", "ssn4"],
        ...
    }
}
```